feat: 安全相关配置

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'unsafe-eval';
+               script-src-elem 'self';
+               style-src 'unsafe-inline'; 
+               img-src https://cdn.v2ex.com/"
+    />
     <title>V2EX</title>
   </head>
   <body>
