--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       content="script-src 'unsafe-eval';
                script-src-elem 'self';
                style-src 'unsafe-inline'; 
-               img-src https://cdn.v2ex.com/"
+               img-src 'self' https:"
     />
     <title>V2EX</title>
   </head>
